# djangocms-ads

./: .editorconfig  .pre-commit-config.yaml  HISTORY.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  test_settings.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codecov.yml  codeql-analysis.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  ruff.yml
requirements/: compile.py  py310-cms310-django32.txt  py311-cms311-django41.txt  py311-cms311-django42.txt  py38-cms310-django32.txt  py38-cms37-django22.txt  py38-cms37-django31.txt  py38-cms39-django22.txt  py38-cms39-django31.txt  py38-cms39-django32.txt  py39-cms310-django32.txt  py39-cms39-django22.txt  py39-cms39-django31.txt  py39-cms39-django32.txt  requirements.in
src/djangocms_ads/: __init__.py  apps.py  cms_plugins.py  models.py
src/djangocms_ads/migrations/: 0001_initial.py
src/djangocms_ads/templates/djangocms_ads/default/: ad_slot.html  advert.html  container_advanced.html  container_simple.html
tests/: test_models.py  test_plugins.py
tests/requirements/: py38-cms37-django31.txt  py38-cms39-django22.txt  py38-cms39-django31.txt  py38-cms39-django32.txt  py39-cms39-django22.txt  py39-cms39-django31.txt  py39-cms39-django32.txt  requirements.in
