[metadata]
name = djangocms-ads
version = 1.1.2
description = Google ads for django-cms
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mark Walker
author_email = theshow@gmail.com
url = https://github.com/marksweb/djangocms-ads
project_urls =
    Changelog = https://github.com/marksweb/djangocms-ads/blob/main/HISTORY.rst
    Twitter = https://twitter.com/markwalker_
license = MIT
keywords = Django, django-cms
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django CMS
    Framework :: Django CMS :: 3.7
    Framework :: Django CMS :: 3.8
    Framework :: Django CMS :: 3.9
    Framework :: Django CMS :: 3.10
    Framework :: Django CMS :: 3.11
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    Django>=2.2
    django-cms>=3.7
    djangocms-attributes-field
    django-sekizai
python_requires = >=3.8
zip_safe = False
test_suite = test_settings.run

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    djangocms_ads
    tests

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 119
extend-ignore = A003,B009,B010,C101,C408,C812,C815,E501,E800,N400,Q000
exclude = "migrations,docs"
